--- a/HabitPromiss/HabitPromiss/scene/View/Base.lproj/Main.storyboard
+++ b/HabitPromiss/HabitPromiss/scene/View/Base.lproj/Main.storyboard
@@ -31,8 +31,12 @@
                                             <rect key="frame" x="0.0" y="0.0" width="375" height="78"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WXY-sw-Gd3">
+                                                    <rect key="frame" x="10" y="5" width="355" height="63"/>
+                                                    <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                </view>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="물마시기" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gz1-7t-9cl">
-                                                    <rect key="frame" x="84" y="10" width="80" height="44"/>
+                                                    <rect key="frame" x="84" y="15" width="80" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="740-WD-mBG"/>
                                                     </constraints>
@@ -41,7 +45,7 @@
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hMX-tx-ZZZ">
-                                                    <rect key="frame" x="20" y="10" width="44" height="44"/>
+                                                    <rect key="frame" x="20" y="15" width="44" height="44"/>
                                                     <constraints>
                                                         <constraint firstAttribute="height" constant="44" id="59t-fe-Om1"/>
                                                         <constraint firstAttribute="width" constant="44" id="IXd-hs-U54"/>
@@ -49,15 +53,19 @@
                                                 </imageView>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="hMX-tx-ZZZ" firstAttribute="top" secondItem="svQ-rB-6dF" secondAttribute="top" constant="10" id="NjJ-va-Q8x"/>
+                                                <constraint firstItem="WXY-sw-Gd3" firstAttribute="leading" secondItem="svQ-rB-6dF" secondAttribute="leading" constant="10" id="1XA-KY-UTZ"/>
+                                                <constraint firstItem="WXY-sw-Gd3" firstAttribute="top" secondItem="svQ-rB-6dF" secondAttribute="top" constant="5" id="3LB-p6-iqv"/>
+                                                <constraint firstItem="hMX-tx-ZZZ" firstAttribute="top" secondItem="svQ-rB-6dF" secondAttribute="top" constant="15" id="8vk-iq-j8g"/>
+                                                <constraint firstAttribute="trailing" secondItem="WXY-sw-Gd3" secondAttribute="trailing" constant="10" id="M7c-vN-g5N"/>
                                                 <constraint firstItem="hMX-tx-ZZZ" firstAttribute="leading" secondItem="svQ-rB-6dF" secondAttribute="leading" constant="20" id="PB7-GD-9Ll"/>
+                                                <constraint firstAttribute="bottom" secondItem="WXY-sw-Gd3" secondAttribute="bottom" constant="10" id="Yq1-it-3pA"/>
                                                 <constraint firstItem="gz1-7t-9cl" firstAttribute="bottom" secondItem="hMX-tx-ZZZ" secondAttribute="bottom" id="cH5-0G-PWl"/>
                                                 <constraint firstItem="gz1-7t-9cl" firstAttribute="leading" secondItem="hMX-tx-ZZZ" secondAttribute="trailing" constant="20" id="lBD-Oc-FO3"/>
                                                 <constraint firstItem="gz1-7t-9cl" firstAttribute="top" secondItem="hMX-tx-ZZZ" secondAttribute="top" id="lJ7-mB-dvB"/>
-                                                <constraint firstAttribute="bottom" secondItem="hMX-tx-ZZZ" secondAttribute="bottom" constant="24" id="zQT-wg-Z9S"/>
                                             </constraints>
                                         </tableViewCellContentView>
                                         <connections>
+                                            <outlet property="cellView" destination="WXY-sw-Gd3" id="uLZ-m9-3ZL"/>
                                             <outlet property="imgView" destination="hMX-tx-ZZZ" id="tbN-Fn-8Jy"/>
                                             <outlet property="promissListText" destination="gz1-7t-9cl" id="CKc-qs-rc3"/>
                                         </connections>
